@@ -1,7 +1,7 @@
 #  File src/library/utils/R/windows/download.file.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2018 The R Core Team
+#  Copyright (C) 1995-2020 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -45,14 +45,12 @@ download.file <-
 
     switch(method,
 	   "internal" =, "wininet" = {
-	       if(!is.null(headers))
-		   headers <- paste0(nh, ": ", headers, "\r\n", collapse = "")
+	       headers <- if(length(headers)) paste0(nh, ": ", headers, "\r\n", collapse = "")
 	       status <- .External(C_download, url, destfile, quiet, mode, cacheOK,
 				   headers, method == "wininet")
 	   },
 	   "libcurl" = {
-	       if(!is.null(headers))
-		   headers <- paste0(nh, ": ", headers)
+	       headers <- if(length(headers)) paste0(nh, ": ", headers)
 	       status <- .Internal(curlDownload(url, destfile, quiet, mode, cacheOK,
 						headers))
 	   },
